Combine ethCall and estimateGas tests into one to reduce duplication
Signed-off-by: Bilyana Gospodinova <bilyana.gospodinova14@gmail.com>